[package]
name = "gridtokenx-wasm"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
curve25519-dalek = { version = "3", features = ["serde"] }
rand = "0.8"
solana-zk-token-sdk = "1.18.26"
bytemuck = { version = "1.16", features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
